Fix spacing issues in li in header, start styling instructions page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,13 +18,17 @@ body {
 }
 
 header, section, footer {
-    clear: both;
     padding: 2rem 4rem;
     text-align: center;
 }
 
+.main-page-container {
+    justify-content: center;
+    align-items: center;
+}
+
 /* font families and sizes */
-h1, h2 {
+h1, h2, h3 {
     font-family: 'Orelega One', sans-serif; 
 }
 
@@ -34,6 +38,10 @@ h1 {
 
 h2 {
     font-size: 3rem;
+}
+
+h3 {
+    font-size: 2rem;
 }
 
 p, li {
@@ -56,18 +64,15 @@ i {
 }
 
 /* header */
-header, .nav-list {
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-header {
     border-bottom: solid 3px black;
 }
 
 .nav-list {
-    padding: 0rem 2rem;
+    padding-left: 4rem;
 }
 
 a {
@@ -84,7 +89,7 @@ a:hover {
 }
 
 /* The following code was predominantly taken from YouTuber Web Dev Simplified and adapted to the needs of this site - see README for details */
-/* virtual piano */
+/* virtual piano page */
 .virtual-piano, .notes {
     display: flex;
     justify-content: center;
@@ -104,6 +109,15 @@ a:hover {
     margin-left: -30px;
     margin-right: -30px;
     z-index: 2;
+}
+
+/* instructions page */
+section li {
+    list-style: circle; 
+}
+
+section ul {
+    display: block;
 }
 
 /* footer */
